{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 14,
  "lineage": "2d226b6c-c8f9-4b5d-c854-72f74be05d8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "balal-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610552914557:loadbalancer/app/balal-website-alb/6c037dba6a0f48f9",
            "arn_suffix": "app/balal-website-alb/6c037dba6a0f48f9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "balal-website-alb-2129265037.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:610552914557:loadbalancer/app/balal-website-alb/6c037dba6a0f48f9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balal-website-alb",
            "security_groups": [
              "sg-02c12122eeacf3a05"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0272c7af51694b749"
              },
              {
                "subnet_id": "subnet-05f8b2a3219a23a01"
              },
              {
                "subnet_id": "subnet-072b6b1640c071ffd"
              },
              {
                "subnet_id": "subnet-08a866da90eb24d7d"
              },
              {
                "subnet_id": "subnet-0b91633bfa8f316a9"
              },
              {
                "subnet_id": "subnet-0eeb338fad91fad38"
              }
            ],
            "subnets": [
              "subnet-0272c7af51694b749",
              "subnet-05f8b2a3219a23a01",
              "subnet-072b6b1640c071ffd",
              "subnet-08a866da90eb24d7d",
              "subnet-0b91633bfa8f316a9",
              "subnet-0eeb338fad91fad38"
            ],
            "vpc_id": "vpc-05640946b09d4ffca",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.balal-lb-sg",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "balal-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610552914557:listener/app/balal-website-alb/6c037dba6a0f48f9/6bbec3c6dab4dbd2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:610552914557:targetgroup/balal-tg/fd0519e848de897d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:610552914557:listener/app/balal-website-alb/6c037dba6a0f48f9/6bbec3c6dab4dbd2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:610552914557:loadbalancer/app/balal-website-alb/6c037dba6a0f48f9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balal-lb",
            "aws_lb_target_group.balal-tg",
            "aws_security_group.balal-lb-sg",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "balal-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:610552914557:targetgroup/balal-tg/fd0519e848de897d",
            "arn_suffix": "targetgroup/balal-tg/fd0519e848de897d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:610552914557:targetgroup/balal-tg/fd0519e848de897d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "balal-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05640946b09d4ffca"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balal-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610552914557:security-group/sg-012de97dec4f1e445",
            "description": "traffic from loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012de97dec4f1e445",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "traffic from loadbalancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c12122eeacf3a05"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "balal-ec2-sg",
            "name_prefix": "",
            "owner_id": "610552914557",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05640946b09d4ffca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.balal-lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balal-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610552914557:security-group/sg-02c12122eeacf3a05",
            "description": "traffic from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-02c12122eeacf3a05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "traffic from internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "balal-lb-sg",
            "name_prefix": "",
            "owner_id": "610552914557",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05640946b09d4ffca"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}